[build-system]
requires = ["protobuf", "isort", "black", "pyminifier"]

[tool.isort]
py_version = 39
profile = "black"
skip = [
  "*.git/",
  "*.venv",
  "/build/",
  "/docs/",
  "/logs/",
  ".vscode/",
  "/dist/",
  "proto/proto_out",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.venv
    | build
    | docs
    | logs
    | .vscode
    | dist
    | proto_out
  )/
)
'''
